<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".logbook.LogbookFragment"
    >

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:cardElevation="0dp"
      app:cardCornerRadius="@dimen/card_radius"
      android:layout_margin="@dimen/margin_small"
      app:contentPadding="@dimen/margin_small"
      app:cardBackgroundColor="@color/colorAccentOpacity"
      android:id="@+id/cardViewHeader">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <Button
          android:id="@+id/saveButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/button_action_save"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/bloodGlucoseInput"
          />

      <EditText
          android:id="@+id/bloodGlucoseInput"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/edit_action_add_value_hilt"
          android:inputType="numberDecimal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/unitSpinner"
          />

      <Spinner
          android:id="@+id/unitSpinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <TextView
          android:id="@+id/averageLabel"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_medium"
          android:textSize="@dimen/text_size_medium"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/saveButton"
          tools:text="Average: 0.0"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_small"
      android:layout_marginEnd="@dimen/margin_small"
      android:layout_marginTop="@dimen/margin_medium"
      android:paddingBottom="@dimen/margin_small"
      android:id="@+id/frameLayoutHeaderTable"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cardViewHeader"
      >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:gravity="start"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:text="@string/simple_label_blood_glucose"
        tools:text="Blood glucose"
        />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:gravity="end"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:text="@string/simple_label_date"
        tools:text="Date"
        />
  </FrameLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      tools:itemCount="10"
      tools:listitem="@layout/item_blood_glucose_entry"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/frameLayoutHeaderTable"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textViewNoData"
      android:textStyle="bold"
      android:textSize="@dimen/text_size_large"
      android:text="@string/simple_text_no_data"
      app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardViewHeader"
      />

</androidx.constraintlayout.widget.ConstraintLayout>